--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "mdb-angular-boilerplate": {
+    "ng-smartcom-": {
       "root": "",
       "sourceRoot": "src",
       "projectType": "application",
@@ -17,7 +17,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/mdb-angular-boilerplate",
+            "outputPath": "dist/ng-smartcom",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -42,12 +42,10 @@
           },
           "configurations": {
             "production": {
-              "fileReplacements": [
-                {
-                  "replace": "src/environments/environment.ts",
-                  "with": "src/environments/environment.prod.ts"
-                }
-              ],
+              "fileReplacements": [{
+                "replace": "src/environments/environment.ts",
+                "with": "src/environments/environment.prod.ts"
+              }],
               "optimization": true,
               "outputHashing": "all",
               "sourceMap": false,
@@ -63,18 +61,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "mdb-angular-boilerplate:build"
+            "browserTarget": "ng-smartcom-:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "mdb-angular-boilerplate:build:production"
+              "browserTarget": "ng-smartcom-:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "mdb-angular-boilerplate:build"
+            "browserTarget": "ng-smartcom-:build"
           }
         },
         "test": {
@@ -108,7 +106,7 @@
         }
       }
     },
-    "mdb-angular-boilerplate-e2e": {
+    "ng-smartcom--e2e": {
       "root": "e2e/",
       "projectType": "application",
       "architect": {
@@ -116,11 +114,11 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "mdb-angular-boilerplate:serve"
+            "devServerTarget": "ng-smartcom-:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "mdb-angular-boilerplate:serve:production"
+              "devServerTarget": "ng-smartcom-:serve:production"
             }
           }
         },
@@ -136,7 +134,7 @@
       }
     }
   },
-  "defaultProject": "mdb-angular-boilerplate",
+  "defaultProject": "ng-smartcom-",
   "cli": {
     "defaultCollection": "@ngrx/schematics"
   }
